# neovim-settings

./: .gitignore  Readme.md  build.sh  coc-settings.json  ginit.vim  init.lua  init.sh  init.vim  neovim-settings  neovimd.service
colors/: Readme.md  home.txt  vscode.lua
config/: autocmd.lua  commands.lua  commands.vim  hot-key.lua  hot-key.vim  index.lua  index.vim  init.lua  packer.lua  plugin-config.lua  plugin-config.vim  plugins.lua  settings.lua  settings.vim  theme.lua  theme.vim  vim-plug.vim
debian-build/DEBIAN/: control
lua/: Logger.lua  cmake.lua  ctags.lua  dialog.lua  event.lua  format.lua  index.lua  init.lua  job.lua  logger.lua  other.lua  packer-config.lua  plugin-loader.lua  template.lua  text.lua  theme.lua  util.lua
lua/aszswaz/: event.lua  init.lua  logger.lua  template.lua  text.lua
lua/aszswaz/config/: autocmd.lua  init.lua  settings.lua
lua/aszswaz/config/hotkey/: buffer.lua  coc.lua  init.lua  plugin.lua
lua/aszswaz/config/plugin/: bufferline.lua  indent_blankline.lua  init.lua  nvim-autopairs.lua  nvim-tree.lua  project.lua  toggleterm.lua  translate.lua  vim-bookmarks.lua
lua/aszswaz/float-window/: dialog.lua
lua/aszswaz/util/: init.lua  job.lua  storage.lua  vim-warp.lua
lua/dialog/: center.lua  define.lua  init.lua  notify.lua
lua/float-window/: define.lua  dialog.lua  init.lua  notify.lua
lua/util/: init.lua  job.lua  objects.lua  storage.lua  string.lua  table.lua
lua/utils/: dialog.lua  job.lua  util.lua
plugin/: config.lua  manager.lua
src/: autocmd.vim  commands.vim  functions.vim  global-constant.vim  global_constant.vim  hook.vim  hot-key.vim  other.vim  plugin-config.lua  plugin-config.vim  plugin-loader.vim  settings.vim  sysinit.vim  theme-config.vim  vim-plug.vim
src/aszswaz/lua/aszswaz/: error-code.lua
src/aszswaz/lua/aszswaz/config/: init.lua  settings.lua
src/aszswaz/lua/aszswaz/config/plugin/: coc.lua
src/aszswaz/lua/aszswaz/float-window/: notify.lua
src/aszswaz/lua/aszswaz/util/: init.lua
src/functions/: cmake.lua  ctags.lua  ctags.vim  dialog.lua  dialog.vim  format.lua  format.vim  hot-key.vim  index.vim  job.vim  other.vim  plugin.vim  row.vim  template.lua  util.lua
src/plugins/: tags
src/runtime/lua/aszswaz/config/: commands.lua  hotkey.lua
src/runtime/lua/aszswaz/config/plugin/: init.lua
src/templates/: Makefile
syntax/: fish.vim
templates/: CCmakeLists.txt  CMakeLists.txt  CppCmakeLists.txt  Makefile  PKGBUILD  desktop.desktop
test/: demo.lua  float-window.lua  init.lua  init.sh  logger.lua  storage.lua  text.lua
usr/share/nvim/runtime/lua/aszswaz/: theme.lua
usr/share/nvim/runtime/lua/aszswaz/config/: autocmd.lua
usr/share/nvim/runtime/lua/aszswaz/config/plugin/: coc.lua  nvim-tree.lua
usr/share/nvim/runtime/lua/aszswaz/util/: string.lua
vim/: index.vim  other.vim  row.vim
